# framework.uifw.cbhm

./: AUTHORS  CMakeLists.txt  cbhm.manifest  cbhm.rule
2.2/: CMakeLists.txt
2.2/data/tables/: _ChangeableColorInfo.xml
2.2/data/themes/: cbhmdrawer.edc  popup_layout.edc  scroller.edc
2.2/po/: CMakeLists.txt  cs.po  da.po  el_GR.po  en.po  et.po  eu.po  fi.po  fr.po  gl.po  is.po  kk.po  lv.po  nb.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sl.po  sr.po  sv.po  tr_TR.po  uk.po  uz.po
2.2/src/: cbhm.h  clipdrawer.c  item_manager.c  item_manager.h  main.c  storage.c  xconverter.c  xconverter.h  xhandler.c
2.3-mobile/: CMakeLists.txt
2.3-mobile/data/tables/: _ChangeableColorInfo.xml  _ChangeableFontInfo.xml
2.3-mobile/data/themes/: cbhmdrawer.edc  scroller.edc
2.3-mobile/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+9 more)
2.3-mobile/src/: cbhm.h  clipdrawer.c  clipdrawer.h  item_manager.c  item_manager.h  main.c  storage.c  xconverter.c  xhandler.c
2.3-wearable/: CMakeLists.txt
2.3-wearable/data/tables/: _ChangeableFontInfo.xml
2.3-wearable/data/themes/: cbhmdrawer.edc
2.3-wearable/po/: az.po  bg.po  ca.po  de.po  es_ES.po  es_US.po  fr_CA.po  hr.po  hu.po  hy.po  it_IT.po  ka.po  ko_KR.po  lt.po  mn_MN.po  nl.po  pl.po  sk.po
2.3-wearable/src/: clipdrawer.c  clipdrawer.h  item_manager.c  item_manager.h  main.c  storage.c  xconverter.c
data/init_script/: cbhm
data/themes/: cbhmdrawer.edc  extstyles.edc
debian/: cbhm.install.in  cbhm.postinst  cbhm.prerm  changelog  control  copyright  rules
packaging/: cbhm.changes  cbhm.service  cbhm.spec
src/: cbhm.h  cbhm_main.c  cbhm_main.h  clipdrawer.c  clipdrawer.h  common.h  item_manager.c  item_manager.h  main.c  scrcapture.c  scrcapture.h  storage.c  storage.h  xcnphandler.c  xcnphandler.h  xconverter.c  xconverter.h  xhandler.c  xhandler.h
src/old/: cbhm_main.c  cbhm_main.h  clipdrawer.c  clipdrawer.h  common.h  scrcapture.c  scrcapture.h  storage.c  storage.h  xcnphandler.c  xcnphandler.h
systemd/: cbhm.service
